--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.1.0
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
