--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.1.0
   dio: ^5.8.0+1
+  get_it: ^8.0.3
+  flutter_bloc: ^9.1.1
+
+
 
 dev_dependencies:
   flutter_test:
